# Panorama

./: README.md
reports/: project_report.md  readme.txt
solution/: CMakeLists.txt  descriptor.cpp  descriptor.h  harris_corner_detector.cpp  harris_corner_detector.h  main.cpp  matcher.cpp  matcher.h
