cmake_minimum_required(VERSION 3.13)
project(solution)
find_package(OpenCV REQUIRED)
set(CMAKE_CXX_STANDARD 17)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(solution main.cpp harris_corner_detector.h descriptor.h descriptor.cpp harris_corner_detector.cpp matcher.h matcher.cpp)
target_link_libraries(solution ${OpenCV_LIBS})